# attestable

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: API.md  ARCHITECTURE.md  FAQ.md
examples/: quickstart.py
src/attestable/: __init__.py  anchors.py  attestation.py  derived.py  errors.py  py.typed  resolver.py
tests/: test_anchors.py  test_attestation.py  test_derived.py  test_resolver.py
