[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "attestable"
version = "0.1.0"
description = "Auditable, version-pinned provenance for AI-produced values — zero dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "The attestable authors" }]
keywords = [
    "provenance",
    "citations",
    "audit",
    "ai",
    "llm",
    "rag",
    "compliance",
    "traceability",
    "attestation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/your-org/attestable"
Repository = "https://github.com/your-org/attestable"
Issues = "https://github.com/your-org/attestable/issues"
Changelog = "https://github.com/your-org/attestable/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[tool.hatch.build.targets.wheel]
packages = ["src/attestable"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "examples", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PT", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "PT011"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]
